Fix: CSS compability with WindowControlOverlay

--- a/css/components.css
+++ b/css/components.css
@@ -19,7 +19,7 @@ app-taskbar {
 }
 
 app-window {
-    --maximized-top: 30px;
+    --maximized-top: var(--taskbar-height);
     --titlebar-color: #111;
     --titlebar-controls-color: #eee;
     background: #222;
