--- a/css/components.css
+++ b/css/components.css
@@ -38,6 +38,10 @@ app-window.video {
     @media (max-width: 850px) {
         width: 100%;
     }
+
+    @media (max-height: 750px) {
+        height: calc(100% - var(--taskbar-height));
+    }
 }
 
 video-preview {
