--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -14,6 +14,30 @@ body {
     
     }
     
+    & .info {
+        & > * {
+            position: fixed;
+            left: 50px;
+            color: #ffffff;
+        }
+
+        & .name {
+            top: 8px;
+            font-size: 16px;
+        }
+
+        & div.author {
+            top: 28px;
+            font-size: 10px;
+        }
+
+        & img.author {
+            left: 10px;
+            width: 30px;
+            border-radius: 50%;
+        }
+    }
+    
     & .controls {
         position: fixed;
         bottom: 10px;
@@ -46,16 +70,74 @@ body {
                 max-width: 100px;
             }
         }
-    
-        & fluent-button img.fi{
-            filter: invert(1);
+    }
+
+    & .extended-controls {
+        position: fixed;
+        display: flex;
+        right: 10px;
+        height: calc(100% - 120px);
+        top: 20px;
+        flex-direction: column;
+        justify-content: center;
+        -webkit-app-region: no-drag;
+        app-region: no-drag;
+
+        & .like {
+            & img.true {
+                display: none;
+            }
+
+            & img.false {
+                display: block;
+            }
+
+            &[liked]{
+                & img.true {
+                    display: block;
+                }
+
+                & img.false {
+                    display: none;
+                }
+            }
         }
+    }
+
+    & fluent-button img.fi{
+        filter: invert(1);
     }
 
     &[embed] {
         & video {
             height: calc(100% - 80px);
         }
+
+        & .info {
+            & > * {
+                top: unset !important;
+            }
+
+            & .name {
+                bottom: 50px;
+            }
+
+            & div.author {
+                bottom: 38px;
+            }
+
+            & img.author {
+                bottom: 40px;
+            }
+        }
+
+        & .extended-controls {
+            flex-direction: row;
+            bottom: 40px;
+            top: unset;
+            height: unset;
+        }
+
         & .controls {
             bottom: 90px;
         }
