--- a/css/general.css
+++ b/css/general.css
@@ -6,3 +6,7 @@ body {
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+img:not([src]), img[src=''] {
+    visibility: hidden;
+}
