Fix playlist popup mode

--- a/css/components.css
+++ b/css/components.css
@@ -58,6 +58,10 @@ app-window {
         width: 300px;
         top: var(--taskbar-height);
         height: calc(100% - var(--taskbar-height));
+
+        @media (max-width: 300px) {
+            width: 100%;
+        }
     }
 }
 
