--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -26,6 +26,7 @@ body {
             position: fixed;
             left: calc(50px + var(--overlay-x));
             color: #ffffff;
+            filter: drop-shadow(0px 0px 2px #000a);
         }
 
         & .name {
