Hide subtitles button when it's not available for this media

--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -87,6 +87,10 @@ body {
         [audio_only] & :is(.pip, .fullscreen) {
             display: none;
         }
+
+        [no_subtitles] & .subtitles {
+            display: none;
+        }
         
         & fluent-slider {
             padding: 0 2px;
