--- a/css/components.css
+++ b/css/components.css
@@ -90,12 +90,15 @@ input, button, select {
 	min-width: 40px;
 	border: none;
 	color: #fff;
-	background: #222;
 	padding: 8px;
 	box-sizing: border-box;
 	border-radius: 4px;
 	transition: 75ms;
 	accent-color: var(--accent-color);
+
+	&:not([type="color"]){
+		background: #222;
+	}
 	
 	&:is(input):not([type]) { /* if text */
 		width: 200px;
