--- a/windows/css/settings.css
+++ b/windows/css/settings.css
@@ -4,11 +4,23 @@
 
 .title {
 	font-size: 50px;
-	font-variant: petite-caps;
+
+	&:first-letter {
+		text-transform: uppercase;
+	}
 }
 
 .container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
+	.input {
+		display: flex;
+		gap: 10px;
+
+		& img {
+			filter: invert(1);
+		}
+	}
 }
