Improve the UI of Player when embedded & splited playing

--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -166,7 +166,7 @@ body {
         filter: invert(1);
     }
 
-    &[embed]:not(:fullscreen) {
+    &[embed]:not(:is(:fullscreen, [splited_playing])) {
         & video, img.thumbnail {
             height: calc(100% - 80px);
         }
