Add drag'n'drop support for playing local videos

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,11 @@
 
 body {
 	background-image: var(--background-url);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 img.background {
