--- a/css/index.css
+++ b/css/index.css
@@ -17,11 +17,14 @@
 
 body {
 	background-image: var(--background-url);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
+    &:not([extension]){
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 img.background {
