Improve ::selection CSS

--- a/css/components.css
+++ b/css/components.css
@@ -167,6 +167,6 @@ dialog {
 }
 
 ::selection {
-    background: #ffffff;
-    color: var(--accent-color);
+    background: var(--accent-color);
+    color: #ffffff;
 }
